@@ -30,10 +30,9 @@ import org.apache.xml.security.transforms.TransformSpi;
 import org.apache.xml.security.transforms.TransformationException;
 import org.apache.xml.security.transforms.Transforms;
 import org.apache.xml.security.utils.Constants;
-import org.apache.xml.security.utils.JDKXPathAPI;
 import org.apache.xml.security.utils.XMLUtils;
 import org.apache.xml.security.utils.XPathAPI;
-import org.apache.xml.security.utils.XalanXPathAPI;
+import org.apache.xml.security.utils.XPathFactory;
 import org.w3c.dom.DOMException;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
@@ -102,11 +101,8 @@ public class TransformXPath extends TransformSpi {
                 );
             }
             
-            XPathAPI xpathAPIInstance = new XalanXPathAPI();
-            if (!XalanXPathAPI.isInstalled()) {
-                xpathAPIInstance = new JDKXPathAPI();
-            }
-
+            XPathFactory xpathFactory = XPathFactory.newInstance();
+            XPathAPI xpathAPIInstance = xpathFactory.newXPathAPI();
             input.addNodeFilter(new XPathNodeFilter(xpathElement, xpathnode, str, xpathAPIInstance));
             input.setNodeSet(true);
             return input;
